@@ -1,3 +1,5 @@
+* Rewrite fuse.ajax.responders and fuse.ajax.Request to use custom class events. [jddalton]
+
 * Add support for custom events to fuse.Class via the fuse.Class.mixins.event mixin. [jddalton]
 
 * Break array/object references on the prototype when calling a constructor that is defined with an `initialize` method on its prototype. [jddalton]
